# kfs

./: .gdb_history  .gitignore  Dockerfile  KFS.md  Makefile  README.md  docker-compose.yml  kfs-1  meson.build  peda-session-1.txt  peda-session-kfs.bin.txt  peda-session-unknown.txt
config/: grub.cfg  linker.ld  linkerHighKernel.ld  x86_64-x86.ini
includes/: assert.h  builtin.h  kernel.h  memory.h  multiboot.h  printk.h  shell.h  symbol_table.h  tty.h  utils.h  vga.h
includes/cpu/: interrupts.h  memory_segments.h  pic.h
includes/driver/: keyboard.h  ports.h  serials.h  tty.h  vga.h
includes/interrupt/: interrupts.h  pic.h
includes/interrupts/: idt.h  interrupts.h  irq.h  isr.h  pic.h
includes/memory/: kmalloc.h  memory.h  memory_map.h  memory_segments.h  paging.h  pmm.h  segments.h  vmalloc.h  vmm.h
includes/shell/: builtin.h
includes/system/: errno.h  interrupts.h  process.h  signals.h  utils.h
includes/system/interrupts/: idt.h  irq.h  isr.h
kernel/: dump_stack.c  kernel.c  meson.build  symbol_table.c
kernel/boot/: HigherHalfKernel.asm  boot.asm  boot.s  crti.asm  meson.build
kernel/builtin/: dump_stack.c  halt.c  meson.build  reboot.c  shutdown.c
kernel/cpu/: idt.s  interrupt_handlers.s  interrupts.c  meson.build  pic.c
kernel/cpu/interrupt/: idt.asm  idt.s  interrupt_handlers.asm  interrupts.c  pic.c
kernel/cpu/segmentation/: gdt.asm  gdt.s  memory_segments.c
kernel/driver/: keyboard.c  meson.build  ports.c  serials.c  tty.c  vga.c
kernel/driver/tty/: meson.build  term_clear.c  term_cursor_backward.c  term_cursor_forward.c  term_default_color.c  term_get_c_entry_at.c  term_get_c_entry_at_pos.c  term_get_index.c  term_getline.c  term_go_end_line.c  term_go_home_line.c  term_goto.c  term_init.c  term_put_c_entry.c  term_put_c_entry_at.c  term_put_entry.c  term_put_entry_at.c  term_put_from_keyqueue.c  term_putc.c  term_putkey.c  term_putnbr.c  term_puts.c  term_reset_color.c  term_scroll_up.c  term_set_color.c  term_set_index.c  term_set_text_color.c  term_write.c
kernel/interrupt/: idt.asm  interrupt_handlers.asm  interrupts.c  meson.build  pic.c
kernel/interrupts/: README.md  idt.c  idt_load.asm  interrupt_handlers.asm  interrupts.c  irq.asm  isr.asm  isr.c  isr_callbacks.c  meson.build  pic.c
kernel/memory/: memory_init.c  memory_map.c  meson.build  mmap.c  munmap.c  pmm.c  vmm.c
kernel/memory/heap/: vfree.c  vmalloc.c
kernel/memory/kheap/: kbrk.c  kcalloc.c  kfree.c  kmalloc.c  krealloc.c
kernel/memory/memory_map/: memory_map_init.c  memory_map_print.c  memory_sections_init.c  meson.build
kernel/memory/paging/: alloc_frame.c  enable_paging.asm  get_page.c  meson.build  page_fault.c  paging.c  paging_enable.asm  paging_init.c
kernel/memory/physical/: meson.build  pmm.c
kernel/memory/segmentation/: memory_segments.c  meson.build  segments.c
kernel/memory/utils/: meson.build  print_free_list.c  print_memory.c  show_alloc_mem.c  show_alloc_mem_freed.c  show_alloc_mem_hex.c  show_page_num.c
kernel/memory/virtual/: meson.build  mmap.c  vmm.c
kernel/memory/virtual/vmalloc/: meson.build  vcalloc.c  vrealloc.c
kernel/printk/: formater_p.c  formaters_c_s.c  formaters_d_i.c  formaters_u_per.c  formaters_x_xu.c  meson.build  parsers.c  printk.c  printk_utils.c  utils.c  vprintk.c
kernel/shell/: meson.build  shell.c
kernel/shell/builtin/: dump_stack.c  halt.c  layout.c  meson.build  mmap_print.c  shutdown.c
kernel/system/: meson.build
kernel/system/interrupts/: idt.c  interrupts.dio  irq.asm  isr.c  pic.c
kernel/system/process/: README.md
kernel/system/signals/: do_signal.c  meson.build  sigaction.c  signal.c  signals.dio  signals_default.c  signals_init.c
kernel/system/utils/: meson.build  panic.c
libs/: meson.build
libs/libc/: meson.build
libs/libc/ctype/: isalnum.c  isalpha.c  isascii.c  isblank.c  iscntrl.c  isdigit.c  isgraph.c  islower.c  isprint.c  ispunct.c  isspace.c  isupper.c  isxdigit.c  meson.build  tolower.c  toupper.c
libs/libc/includes/: ctype.h  libc.h  malloc.h  stdio.h  stdlib.h  string.h  unistd.h
libs/libc/includes/sys/: io.h
libs/libc/stdlib/: atoi.c  itoa.c  meson.build  utoa.c
libs/libc/stdlib/malloc/: free.c  malloc.c
libs/libc/string/: bzero.c  memcmp.c  memcpy.c  memmove.c  memset.c  memset16.c  memset32.c  meson.build  startwith.c  strcat.c  strchr.c  strcmp.c  strcpy.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strrchr.c  strrev.c  strtolower.c  strtoupper.c
libs/libc/sys/io/: read_port.c  write_port.c
libs/libk/: interrupts.c  keyboard.c  meson.build  tty.c  vga.c
libs/libk/includes/: interrupts.h  keyboard.h  libk.h  tty.h  vga.h
sources/: interrupts.c  kernel.c  meson.build  tty.c  vga_terminal.c
sources/driver/: tty.c  vga.c
