memory_c = files([
	'pmm.c',
	'vmm.c',
	'kheap/kmalloc.c',
	'kheap/kfree.c',
	'kheap/krealloc.c',
	'kheap/kcalloc.c',
	'kheap/kbrk.c',
	
	'segmentation/segments.c',

	'paging/page_fault.c',

	'utils/show_page_num.c',
	'utils/show_alloc_mem.c',
	'utils/show_alloc_mem_hex.c',
	'utils/show_alloc_mem_freed.c',
	'utils/print_memory.c',

	'memory_map.c',
])

memory_asm = files([
	'segmentation/gdt.asm',
])
